Fixed for case: Gallery Edit - fix overlapping toolbars.(Case id MFE-634)

--- a/app/memreas/css/transtyle.css
+++ b/app/memreas/css/transtyle.css
@@ -120,10 +120,14 @@ li.working-upload .progress-text{
 }
 #tab-content-share .hideCls{ display: none; }
 #tab-content-share #tab1-share{ display: block; }
+
 .aviary-edit-wrapper{
     height: 120px; position: relative;
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
+}
+.avpw_tool_pager .avpw_clip{
+	min-width:80px;
 }
 .aviary-thumbs li, .galleries-location li{
     margin-bottom: 10px !important;
@@ -334,6 +338,9 @@ input[name="account_repassword"]{ width: 42%; margin-right: 10px; float: left; }
     background: none !important;
     box-shadow: none;
     -moz-box-shadow:none;
+}
+#avpw_controls{
+	min-width: 100% !important;
 }
 .gallery-edit{
     position: relative;
